clean up images

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -4,7 +4,7 @@
 .main-page {
   display: flex;
   justify-content: space-between;
-  background-image: image_url("splash_img.jpg");
+  background-image: image_url("splash_img_copy.jpg");
   background-size: cover;
   height: calc(100vh - 59px);
   width: 100vw;
@@ -165,7 +165,7 @@
   }
 }
 .nav-logo-img {
-  background-image: image_url("brain_hacking2.png");
+  background-image: image_url("brain_hacking3.png");
   height: 35px;
   width: 53px;
   background-size: cover;
