--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,19 @@
     <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Sanchez" %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= favicon_link_tag %>
     <%= javascript_include_tag 'application' %>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114047479-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114047479-2');
+    </script>
+
     <% if logged_in? %>
       <script>
       window.currentUser = {
