--- a/app/assets/stylesheets/api/study-sidebar.scss
+++ b/app/assets/stylesheets/api/study-sidebar.scss
@@ -25,7 +25,7 @@
 }
 
 .nav-sidebar-logo {
-  background-image: image_url("brain_hacking.png");
+  background-image: image_url("brain_hacking3.png");
   background-size: cover;
   text-decoration: none;
   width: 27px;
