--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -366,7 +366,7 @@
   }
 
   .deck-show-page {
-    padding: 25px 10px;
+    padding: 45px 5vw;
     position: relative;
   }
 
@@ -377,8 +377,8 @@
 
   .deck-delete {
     position: absolute;
-    top: 10px;
-    right: 3px;
+    top: 20px;
+    right: 2vw;
   }
 
   .cards-index form {
@@ -386,7 +386,7 @@
 
     button {
       position: absolute;
-      right: 3px;
+      right: 4vw;
     }
   }
 
