foolproof resizing for study page

--- a/app/assets/stylesheets/api/cards.scss
+++ b/app/assets/stylesheets/api/cards.scss
@@ -21,6 +21,8 @@
       margin-top: 3px;
       background-color: rgba(255, 255, 255, 0);
       outline: none;
+      position: absolute;
+      right: 4.5vw;
     }
     span:first-child {
       margin-right: 3vw;
