--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -9,6 +9,7 @@
   height: calc(100vh - 59px);
   width: 100vw;
   color: #eaeaea;
+  overflow-y: hidden;
 
 
   .login-form-container {
@@ -30,6 +31,10 @@
       padding: 30px;
       border-radius: 5px;
     }
+    .login-buttons {
+      width: 100%;
+    }
+
     .login-input {
       font-size: 18px;
       color: #c3c3c3;
@@ -203,6 +208,45 @@ header {
 
 }
 
+@media (max-width: 815px) {
+  .main-page {
+    .login-form-container {
+      margin: 7vh 4vw;
+      form {
+        margin-bottom: 0;
+        padding: 20px;
+        
+        h1 {
+          font-size: 1.5em;
+        }
+  
+        .login-input {
+          font-size: 14px;
+          margin-bottom: 10px;
+          padding: 7px;
+          height: 15px;
+        }
+  
+        input[type="submit"] {
+          padding: 7px;
+          width: 47%;
+          margin-top: 10px;
+          font-size: 14px;
+        }
+  
+        input[type="submit"]:first-child {
+          margin-right: 5px;
+        }
+  
+        .login-buttons {
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 650px) {
   .nav-greeting p {
     display: none;
@@ -212,6 +256,19 @@ header {
   }
   .nav-greeting button {
     margin: 0 2vw 0 0;
+  }
+}
+
+@media (max-width: 425px) {
+  .login-page-header {
+    h1 {
+      font-size: 1.3em;
+    }
+    p {
+      margin-top: 5px;
+      margin-bottom: 5px;
+      font-size: 0.8em;
+    }
   }
 }
 
