bring form to top of page

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -215,6 +215,7 @@ header {
       form {
         margin-bottom: 0;
         padding: 20px;
+        align-self: flex-start;
         
         h1 {
           font-size: 1.5em;
