--- a/app/assets/stylesheets/api/study-sidebar.scss
+++ b/app/assets/stylesheets/api/study-sidebar.scss
@@ -95,3 +95,25 @@
 }
 .CircularProgressbar-trail      { stroke: #c3c3c3; }
 .CircularProgressbar-text       { fill: #fff; }
+
+@media (max-width: 815px) {
+  .study-sidebar {
+    display: none;
+  }
+
+  .nav-sidebar {
+    width: 100%;
+    height: 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    button {
+      margin-top: 0;
+    }
+
+    button:first-child {
+      margin-top: 0;
+    }
+  }
+}
