--- a/app/assets/stylesheets/api/confs.scss
+++ b/app/assets/stylesheets/api/confs.scss
@@ -194,4 +194,13 @@
   .study-buttons button {
     height: 10vh;
   }
+
+  .study-buttons {
+    margin-top: 2px;
+  }
+
+  .study-prompt p {
+    margin-top: 1vh;
+    margin-bottom: 0;
+  }
 }
