--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -63,8 +63,8 @@
 .deck-tabs {
   width: 100%;
   background-color: #f0ad4e;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 59px;
   left: 0;
   right: 0;
   border-radius: 0;
