--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -71,7 +71,9 @@
   outline: none;
   padding: 6px 12px;
   color: #fff;
-  border: 1px solid #ec971f;
+  border-bottom: 1px solid #ec971f;
+  border-right: 1px solid #ec971f;
+  border-left: 1px solid #ec971f;
   z-index: 1;
 }
 
