--- a/app/assets/stylesheets/api/confs.scss
+++ b/app/assets/stylesheets/api/confs.scss
@@ -40,7 +40,8 @@
 }
 
 .front, .back {
-	backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   background-color: #fff;
   box-shadow: 0 3px 5px rgba(0,0,0, 0.5);
 	position: absolute;
