--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Sanchez" %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= favicon_link_tag %>
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'bundle', defer: true %>
+    <%= javascript_include_tag '/bundle.js', defer: true %>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114047479-2"></script>
